--- a/internal/frontend/home/index.html
+++ b/internal/frontend/home/index.html
@@ -5,14 +5,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
-        <title>Zenevents - events planning service</title>
+        <title>Zenevent - events planning service</title>
         <style>
             body {
                 margin: 0;
                 background-color: antiquewhite;
             }
             header {
-                padding: 20px;
+                padding: 60px;
                 margin-top: 0;
                 background-color: #12343b;
             }
@@ -44,7 +44,7 @@
             <a class="gravitas-one" href="/">
                 <h1>ZENEVENT<small><small><small> ෴</small></small></small></h1>
             </a>
-            <a class="show-events" href="/events">
+            <a class="show-events" href="/events/all">
                 <h2>Events</h2>
             </a>
 
@@ -58,7 +58,7 @@
             {{ end }}
         </header>
         <div class="marg-t">
-            <a href="">ALL EVENTS</a>
+            <a href="/events/all">ALL EVENTS</a>
         </div>
     </body>
 </html>
