--- a/internal/frontend/events/all_events.html
+++ b/internal/frontend/events/all_events.html
@@ -79,7 +79,7 @@
                     </a>
                 </div>
                 <div id="right" class="event-card">
-                    <a class="quest" href="/events/quests">
+                    <a class="quest" href="/events/quest">
                         <h2>Quests</h2>
                     </a>
                 </div>
