--- a/internal/frontend/organizer/register_org.html
+++ b/internal/frontend/organizer/register_org.html
@@ -4,30 +4,84 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ORGANIZATION REGISTER</title>
         <style>
-            header {
-                margin: 0 auto;
-                text-align: center;
-            }
-            button {
-                display: block;
-                margin-top: 1rem;
-            }
-            label{
-                display: block;
-                margin-top: 8px;
-            }
-            button {
-                margin: 0 auto;
-                margin-top: 20px;
-            }
-            .home {
-                margin-top: 10px;
-                color: darkgreen;
-            }
-            a {
-                display: block;
-                text-decoration: none;
-            }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(to right, #e7e5f9, rgb(93, 78, 195));
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .individual_auth {
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            width: 360px;
+            text-align: center;
+        }
+
+        .individual_auth label {
+            display: block;
+            margin-bottom: 6px;
+            font-weight: 500;
+            color: rgb(93, 78, 195);
+            text-align: left;
+        }
+
+        .individual_auth input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 18px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-sizing: border-box;
+            transition: 0.3s;
+        }
+
+        .individual_auth input[type="text"]:focus {
+            border-color: rgb(93, 78, 195);
+            outline: none;
+            box-shadow: 0 0 5px rgba(93, 78, 195, 0.4);
+        }
+
+        .reg {
+            background-color: rgb(93, 78, 195);
+            color: white;
+            padding: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+        }
+
+        .reg:hover {
+            background-color: rgb(76, 63, 170);
+        }
+
+        a {
+            display: block;
+            margin-top: 16px;
+            color: rgb(93, 78, 195);
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .home {
+            font-weight: bold;
+            margin-top: 8px;
+        }
+
         </style>
     </head>
 
