--- a/internal/frontend/participant/login_part.html
+++ b/internal/frontend/participant/login_part.html
@@ -5,25 +5,79 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            button {
-                display: block;
-                margin-top: 15px;
+            body {
+                margin: 0;
+                padding: 0;
+                font-family: Arial, sans-serif;
+                background: linear-gradient(to right, #e0eafc, #cfdef3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
             }
+
             header {
+                background-color: #ffffff;
+                padding: 40px;
+                border-radius: 12px;
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+                width: 320px;
                 text-align: center;
             }
-            button {
-                margin: 0 auto;
-                margin-top: 20px;
+
+            h1 {
+                margin-bottom: 24px;
+                color: #333;
             }
-            .home {
-                margin-top: 25px;
-                color: darkgreen;
+
+            .form_auth_style input[type="text"],
+            .form_auth_style input[type="password"] {
+                width: 100%;
+                padding: 10px;
+                margin: 8px 0 16px 0;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                box-sizing: border-box;
+                transition: 0.3s;
             }
+
+            .form_auth_style input:focus {
+                border-color: #66afe9;
+                outline: none;
+                box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
+            }
+
+            .form_auth_button {
+                background-color: #4CAF50;
+                color: white;
+                padding: 10px;
+                width: 100%;
+                border: none;
+                border-radius: 8px;
+                cursor: pointer;
+                font-size: 16px;
+                transition: background-color 0.3s;
+            }
+
+            .form_auth_button:hover {
+                background-color: #45a049;
+            }
+
             a {
-                text-decoration: none;
                 display: block;
-                margin-top: 10px;
+                margin-top: 16px;
+                color: #007BFF;
+                text-decoration: none;
+                font-size: 14px;
+            }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+            .home {
+                font-weight: bold;
+                margin-top: 8px;
             }
         </style>
         <title>SIGN IN</title>
