--- a/internal/frontend/home/org_info.html
+++ b/internal/frontend/home/org_info.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
         <title>For Organizers</title>
     </head>
     <style>
@@ -18,7 +18,7 @@
             background-color: darkslateblue;
         }
         a {
-            font-family: "Gravitas One", serif;
+            font-family: "Sofia Sans", serif;
             font-weight: 400;
             font-style: normal;
             display: inline-block;
@@ -39,20 +39,20 @@
     </style>
     <body>
         <header>
-            <a href="/"><h1>ZENEVENT<small><small> ෴ ORGANIZER</small></small></h1></a>
+            <a href="/"><h1>ZENEVENT<small><small> ෴ Организаторы</small></small></h1></a>
         </header>
         <div>
-            <h2>ABOUT US</h2>
+            <h2>О НАС</h2>
 
             <div>
-                <h2 class="h2-info">You are on the page for registering/login as organization. <p></p>In order to add yourself to the list of active organizations, <p>You need to follow simple rules that will help you easily register your organization</p></h2>
+                <h2 class="h2-info">Вы находитесь на странице аутентификации как организатора. <p></p>Чтобы добавить свою организацию в список активных организаций, <p>Вы должны следовать простым правилам, которые помогут достичь этого!</p></h2>
             </div>
 
-            <a href="/auth/register/organizer">Register your organization</a>
-            <h1 class="or">OR</h1>
-            <a href="/auth/login/organizer">Just login to organization</a>
+            <a href="/auth/register/organizer">Зарегистрируйте свою организацию</a>
+            <h1 class="or">ИЛИ</h1>
+            <a href="/auth/login/organizer">Войдите в учетную запись, если такая имеется</a>
 
-            <h2 class="tme">to make events!</h2>
+            <h2 class="tme">чтобы организовывать мероприятия!</h2>
         </div>
     </body>
 </html>
